k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: reqnest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: akta2910/reqnest-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: reqnest
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: frontend
